--- a/Katas_Python.ipynb
+++ b/Katas_Python.ipynb
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "acb3f167",
    "metadata": {},
    "outputs": [
@@ -334,34 +334,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error: No se puede dividir entre cero.\n"
+      "División exitosa. El resultado es: 5.0\n"
      ]
     }
    ],
    "source": [
     "#Ejercicio 8: escribe un programa que pida al usuario dos números e intente dividirlos. Si el usuario ingresa un valor no numérico o intenta dividir por cero, maneja esas excepciones de manera adecuada. Asegúrate de mostrar un mensaje indicando si la división fue exitosa o no.\n",
-    "def dividir_numeros():\n",
+    "def dividir(num1, num2):\n",
     "    \"\"\"\n",
-    "    Solicita dos números al usuario e intenta dividirlos.\n",
-    "    Maneja errores por entrada no numérica o división por cero.\n",
+    "    Realiza la división entre dos números.\n",
+    "\n",
+    "    Parámetros:\n",
+    "    num1 (int o float): Dividendo.\n",
+    "    num2 (int o float): Divisor.\n",
+    "\n",
+    "    Retorna:\n",
+    "    float: Resultado de la división.\n",
+    "\n",
+    "    Lanza:\n",
+    "    ValueError: Si los valores no son numéricos.\n",
+    "    ZeroDivisionError: Si se intenta dividir entre cero.\n",
+    "    \"\"\"\n",
+    "    if not all(isinstance(x, (int, float)) for x in (num1, num2)):\n",
+    "        raise ValueError(\"Se requieren valores numéricos.\")\n",
+    "    \n",
+    "    return num1 / num2\n",
+    "\n",
+    "def main():\n",
+    "    \"\"\"\n",
+    "    Función principal que pide números al usuario\n",
+    "    e intenta dividirlos, manejando errores esperados.\n",
     "    \"\"\"\n",
     "    try:\n",
-    "        num1 = float(input(\"Ingresa el primer número: \"))\n",
-    "        num2 = float(input(\"Ingresa el segundo número: \"))\n",
-    "\n",
-    "        resultado = num1 / num2\n",
+    "        a = float(input(\"Ingresa el primer número: \"))\n",
+    "        b = float(input(\"Ingresa el segundo número: \"))\n",
+    "        resultado = dividir(a, b)\n",
     "        print(f\"División exitosa. El resultado es: {resultado}\")\n",
+    "    except (ValueError, ZeroDivisionError) as e:\n",
+    "        print(f\"Error: {e}\")\n",
     "\n",
-    "    except ValueError:\n",
-    "        print(\"Error: Debes ingresar valores numéricos válidos.\")\n",
-    "    except ZeroDivisionError:\n",
-    "        print(\"Error: No se puede dividir entre cero.\")\n",
-    "    except Exception as e:\n",
-    "        print(f\"Error inesperado: {e}\")\n",
-    "    else:\n",
-    "        print(\"Operación completada sin errores.\")\n",
-    "# Ejecutar la función\n",
-    "dividir_numeros()"
+    "# Ejecutar la función principal\n",
+    "main()"
    ]
   },
   {
@@ -683,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "id": "2a8bdf34",
    "metadata": {},
    "outputs": [],
@@ -706,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "id": "e6582414",
    "metadata": {},
    "outputs": [
@@ -714,20 +727,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Palabras con más de 6 caracteres: ['soleado', 'Madrid']\n"
+      "Palabras con más de 6 caracteres: ['soleado']\n"
      ]
     }
    ],
    "source": [
     "#Ejemplo de uso\n",
     "frase = \"Hace un día soleado en Madrid\"\n",
-    "resultado = palabras_mas_largas_que(frase, 4)\n",
+    "resultado = palabras_mas_largas_que(frase, 6)\n",
     "print(\"Palabras con más de 6 caracteres:\", resultado)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "id": "9fcb70eb",
    "metadata": {},
    "outputs": [],
@@ -744,13 +757,21 @@
     "\n",
     "    Retorna:\n",
     "    int: Número formado por los dígitos\n",
+    "\n",
+    "    Lanza:\n",
+    "    ValueError: Si la lista está vacía o contiene elementos no válidos\n",
     "    \"\"\"\n",
+    "    if not digitos:\n",
+    "        raise ValueError(\"La lista de dígitos no puede estar vacía.\")\n",
+    "    \n",
+    "    if not all(isinstance(d, int) and 0 <= d <= 9 for d in digitos):\n",
+    "        raise ValueError(\"Todos los elementos deben ser dígitos enteros entre 0 y 9.\")\n",
     "    return reduce(lambda acc, d: acc * 10 + d, digitos)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "id": "27e8297c",
    "metadata": {},
    "outputs": [
@@ -947,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "id": "48e443a4",
    "metadata": {},
    "outputs": [],
@@ -963,14 +984,20 @@
     "    lista (list): Lista de números (int o float)\n",
     "\n",
     "    Retorna:\n",
-    "    int o float: Producto total de los elementos\n",
+    "    int o float: Producto total de los elementos. Si la lista está vacía, devuelve 1.\n",
+    "\n",
+    "    Lanza:\n",
+    "    ValueError: Si algún elemento no es numérico.\n",
     "    \"\"\"\n",
-    "    return reduce(lambda x, y: x * y, lista)"
+    "    if not all(isinstance(x, (int, float)) for x in lista):\n",
+    "        raise ValueError(\"Todos los elementos deben ser números (int o float).\")\n",
+    "\n",
+    "    return reduce(lambda x, y: x * y, lista,1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "id": "3b52b2a8",
    "metadata": {},
    "outputs": [
@@ -1157,13 +1184,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "id": "356f4b65",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Ejercicio 27: crea una función que calcule el promedio de una lista de números.\n",
-    "def calcular_promedio(lista_numeros):\n",
+    "def calcular_media(lista_numeros):\n",
     "    \"\"\"\n",
     "    Calcula el promedio de una lista de números.\n",
     "\n",
@@ -1172,16 +1199,19 @@
     "\n",
     "    Retorna:\n",
     "    float: Promedio de los números en la lista\n",
+    "\n",
+    "    Lanza:\n",
+    "    ValueError: Si la lista está vacía\n",
     "    \"\"\"\n",
     "    if not lista_numeros:\n",
-    "        return 0  # Evita división por cero\n",
+    "        raise ValueError(\"La lista está vacía y no se puede calcular el promedio.\")\n",
     "\n",
     "    return sum(lista_numeros) / len(lista_numeros)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "id": "0129185a",
    "metadata": {},
    "outputs": [
@@ -1196,7 +1226,7 @@
    "source": [
     "#Ejemplo de uso\n",
     "numeros = [10, 20, 30, 40]\n",
-    "promedio = calcular_promedio(numeros)\n",
+    "promedio = calcular_media(numeros)\n",
     "print(f\"El promedio es: {promedio}\")"
    ]
   },
@@ -1463,7 +1493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 17,
    "id": "17953f46",
    "metadata": {},
    "outputs": [],
@@ -1490,10 +1520,10 @@
     "\n",
     "#Implementar el método quitar_rama para eliminar una rama en una posición específica.\n",
     "    def quitar_rama(self, posicion):\n",
-    "        if 0 <= posicion < len(self.ramas):\n",
-    "            self.ramas.pop(posicion)\n",
-    "        else:\n",
-    "            print(f\"No se puede quitar la rama en la posición {posicion}: fuera de rango.\")\n",
+    "     try:\n",
+    "        self.ramas.pop(posicion)\n",
+    "     except IndexError:\n",
+    "        raise IndexError(f\"Posición {posicion} fuera de rango\")\n",
     "\n",
     "#Implementar el método info_arbol para devolver información sobre la longitud del tronco, el número de ramas y las longitudes de las mismas.\n",
     "    def info_arbol(self):\n",
@@ -1506,7 +1536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 15,
    "id": "ac26babb",
    "metadata": {},
    "outputs": [],
@@ -1535,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 16,
    "id": "f3663ae0",
    "metadata": {},
    "outputs": [
@@ -1561,7 +1591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 21,
    "id": "e9e911c9",
    "metadata": {},
    "outputs": [],
@@ -1582,31 +1612,38 @@
     "        if cantidad > self.saldo:\n",
     "            raise ValueError(f\"{self.nombre} no tiene suficiente saldo para retirar {cantidad}.\")\n",
     "        self.saldo -= cantidad\n",
-    "        print(f\"{self.nombre} retiró {cantidad}. Saldo actual: {self.saldo}\")\n",
+    "        return True\n",
     "\n",
     "#Implementar el método transferir_dinero para realizar una transferencia desde otro usuario al usuario actual. Lanzará un error en caso de no poder hacerse.\n",
     "    def transferir_dinero(self, desde_usuario, cantidad):\n",
+    "        \"\"\"\n",
+    "        Recibe una transferencia desde otro usuario (desde_usuario).\n",
+    "        Se valida que desde_usuario tenga cuenta corriente, saldo suficiente,\n",
+    "        y que la cantidad sea positiva.\n",
+    "        \"\"\"\n",
+    "        if not isinstance(desde_usuario, UsuarioBanco):\n",
+    "            raise TypeError(\"El emisor debe ser una instancia de UsuarioBanco.\")\n",
     "        if not desde_usuario.cuenta_corriente:\n",
     "            raise ValueError(f\"{desde_usuario.nombre} no tiene cuenta corriente.\")\n",
     "        if cantidad <= 0:\n",
     "            raise ValueError(\"La cantidad a transferir debe ser positiva.\")\n",
     "        if cantidad > desde_usuario.saldo:\n",
-    "            raise ValueError(f\"{desde_usuario.nombre} no tiene suficiente saldo para transferir {cantidad}.\")\n",
+    "            raise ValueError(f\"{desde_usuario.nombre} no tiene saldo suficiente para transferir {cantidad}.\")\n",
     "        desde_usuario.saldo -= cantidad\n",
     "        self.saldo += cantidad\n",
-    "        print(f\"{desde_usuario.nombre} transfirió {cantidad} a {self.nombre}. Saldo actual de {self.nombre}: {self.saldo}\")\n",
+    "        return True\n",
     "\n",
     "#Implementar el método agregar_dinero para agregar dinero al saldo del usuario.\n",
     "    def agregar_dinero(self, cantidad):\n",
     "        if cantidad <= 0:\n",
     "            raise ValueError(\"La cantidad a agregar debe ser positiva.\")\n",
     "        self.saldo += cantidad\n",
-    "        print(f\"{self.nombre} recibió {cantidad}. Saldo actual: {self.saldo}\")"
+    "        return True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 22,
    "id": "58b01b9c",
    "metadata": {},
    "outputs": [],
@@ -1620,16 +1657,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 23,
    "id": "99d32b55",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bob recibió 20. Saldo actual: 70\n"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1639,20 +1679,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 24,
    "id": "27c19112",
    "metadata": {},
    "outputs": [
     {
      "ename": "ValueError",
-     "evalue": "Bob no tiene suficiente saldo para transferir 80.",
+     "evalue": "Bob no tiene saldo suficiente para transferir 80.",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[77], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#Transferir 80 unidades de Bob a Alicia\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m Alicia\u001b[38;5;241m.\u001b[39mtransferir_dinero(Bob, \u001b[38;5;241m80\u001b[39m)\n",
-      "Cell \u001b[1;32mIn[73], line 26\u001b[0m, in \u001b[0;36mUsuarioBanco.transferir_dinero\u001b[1;34m(self, desde_usuario, cantidad)\u001b[0m\n\u001b[0;32m     24\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLa cantidad a transferir debe ser positiva.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     25\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m cantidad \u001b[38;5;241m>\u001b[39m desde_usuario\u001b[38;5;241m.\u001b[39msaldo:\n\u001b[1;32m---> 26\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdesde_usuario\u001b[38;5;241m.\u001b[39mnombre\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m no tiene suficiente saldo para transferir \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcantidad\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     27\u001b[0m desde_usuario\u001b[38;5;241m.\u001b[39msaldo \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m=\u001b[39m cantidad\n\u001b[0;32m     28\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msaldo \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m cantidad\n",
-      "\u001b[1;31mValueError\u001b[0m: Bob no tiene suficiente saldo para transferir 80."
+      "Cell \u001b[1;32mIn[24], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#Transferir 80 unidades de Bob a Alicia\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m Alicia\u001b[38;5;241m.\u001b[39mtransferir_dinero(Bob, \u001b[38;5;241m80\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[21], line 33\u001b[0m, in \u001b[0;36mUsuarioBanco.transferir_dinero\u001b[1;34m(self, desde_usuario, cantidad)\u001b[0m\n\u001b[0;32m     31\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLa cantidad a transferir debe ser positiva.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     32\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m cantidad \u001b[38;5;241m>\u001b[39m desde_usuario\u001b[38;5;241m.\u001b[39msaldo:\n\u001b[1;32m---> 33\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdesde_usuario\u001b[38;5;241m.\u001b[39mnombre\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m no tiene saldo suficiente para transferir \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcantidad\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     34\u001b[0m desde_usuario\u001b[38;5;241m.\u001b[39msaldo \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m=\u001b[39m cantidad\n\u001b[0;32m     35\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msaldo \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m cantidad\n",
+      "\u001b[1;31mValueError\u001b[0m: Bob no tiene saldo suficiente para transferir 80."
      ]
     }
    ],
@@ -1663,16 +1703,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 25,
    "id": "c31cbb16",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Alicia retiró 50. Saldo actual: 50\n"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
